--- a/static/loc.html
+++ b/static/loc.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url='https://img.shields.io/endpoint?url=https://andypythonappdevelop.npkn.net/f0d517/' />
+<meta http-equiv="refresh" content="0; url='https://img.shields.io/endpoint?url=https://andypythonappdevelop.npkn.net/f0d517/'" />
