i dont like html
i am still trying to make it work. my big brain cannot do html unfortunately. rust and assembly forever and ever :love:

--- a/static/loc.html
+++ b/static/loc.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="0; url='https://img.shields.io/endpoint?url=https://andypythonappdevelop.npkn.net/f0d517/'" />
+<!DOCTYPE svg>
+<svg>
+    <image href="https://img.shields.io/endpoint?url=https://andypythonappdevelop.npkn.net/f0d517/">
+</svg>
